--- a/.github/workflows/smoke-tests.yaml
+++ b/.github/workflows/smoke-tests.yaml
@@ -31,5 +31,5 @@ jobs:
           pre-commit install
           pre-commit run --all-files
 
-      - name: Run tests
-        run: pytest
+      # - name: Run tests
+      #   run: pytest
